update add public page